<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_nav_summary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_summary" />
        <item
            android:id="@+id/drawer_nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/drawer_nav_outofdate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_outofdate" />
        <item
            android:id="@+id/drawer_nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />
    </group>
</menu>