<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.starlab.dailycollection.ui.bottom_nav.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.starlab.dailycollection.ui.bottom_nav.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.starlab.dailycollection.ui.bottom_nav.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />
</navigation>